Module 4 is done.

--- a/Books.API/Books.API/appsettings.json
+++ b/Books.API/Books.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BooksDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BooksDB;Trusted_Connection=True;"
+    "BooksDBConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=BooksDB;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
